# sitegen3

./: .gitignore  LICENSE  README.md  pyproject.toml  ralph_loop.sh  ralph_prompt.md
design/: index.html  post.html  posts.html  project.html  projects.html  style.css
docs/: ARCHITECTURE.md  SPEC.md  TASKS.md  TODO.md
src/sitegen3/: build.py  cli.py  config.py  discovery.py  exceptions.py  frontmatter.py  init_cmd.py  loader.py  logging_setup.py  markdown_renderer.py  models.py  serve.py  slug.py  templates.py  writer.py
src/sitegen3/scaffold/: sitegen3.toml
src/sitegen3/scaffold/content/: about.md
src/sitegen3/scaffold/content/posts/: hello-world.md
src/sitegen3/scaffold/content/projects/: sample-project.md
src/sitegen3/scaffold/static/: style.css
src/sitegen3/templates/: about.html.j2  base.html.j2  post.html.j2  posts.html.j2  project.html.j2  projects.html.j2
tests/: test_build.py  test_cli.py  test_config.py  test_discovery.py  test_frontmatter.py  test_init_cmd.py  test_loader.py  test_markdown_renderer.py  test_serve.py  test_slug.py  test_smoke.py  test_templates.py  test_writer.py
tests/fixtures/sample_site/: sitegen3.toml
tests/fixtures/sample_site/content/: about.md
tests/fixtures/sample_site/content/posts/: broken.md  draft-post.md  hello-world.md  older-post.md
tests/fixtures/sample_site/content/projects/: sample.md
