[project]
name = "sitegen3"
version = "0.1.0"
description = "Static site generator for personal websites."
authors = [{ name = "Santiago Acquarone" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "jinja2>=3.1",
    "markdown>=3.5",
    "pygments (>=2.17)",
]

[project.scripts]
sitegen3 = "sitegen3.cli:main"

[tool.poetry]
packages = [{ include = "sitegen3", from = "src" }]
include = [
  "src/sitegen3/templates/**/*",
  "src/sitegen3/scaffold/**/*",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
pyright = "^1.1"
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
